--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/Willitobai/friend_finder#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "1.18.3",
     "express": "4.16.4",
     "mysql": "2.16.0",
     "path": "0.12.7"
