--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "homepage": "https://github.com/Willitobai/friend_finder#readme",
   "dependencies": {
-    "body-parser": "1.18.3",
-    "express": "4.16.4",
-    "mysql": "2.16.0",
-    "path": "0.12.7"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "mysql": "^2.16.0",
+    "path": "^0.12.7"
   }
 }
