--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mysql": "^2.16.0",
+    "msql": "^1.0.3",
+    "mysql": "^2.17.1",
+    "node": "^12.11.0",
     "path": "^0.12.7"
   }
 }
